# nbody-vis

./: CMakeLists.txt  glrender.cpp  sample.cpp
